Fix nav not collapsing

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -4,20 +4,25 @@ nav ul {
           flex-direction: column;
   transition: .3s height ease-in-out;
   overflow: hidden;
-}
-
-nav ul a {
-  width: 100%;
+  height: 0px;
 }
 
 nav ul.visible {
   height: 202px;
 }
 
+nav ul a {
+  width: 100%;
+}
+
 img#toggle {
-  display: block
-  background: $nav
-  padding: 0 50%
+  display: block;
+  background: #4a4a4a;
+  padding: 0.96rem 50%;
+  transition: .3s background ease-in-out;
+  width: 1.2rem;
+  margin: 0 auto;
+  cursor: pointer;
 }
 
 img#toggle:hover {
